test/corpus/letter.txt
==================
letter with dots with zero
==================

letter a 0

---

(source_file
  (letter
    (char)
    (dots_with_zero)))

==================
letter with dots with zero
==================

letter a 123-0-12

---

(source_file
  (letter
    (char)
    (dots_with_zero)))

==================
letter with =
==================

letter a =

---

(source_file
  (letter
    (char)
    (equal)))
