test/corpus/special_processing_opcodes.txt
==================
capsnocont
==================

capsnocont

---

(source_file
  (capsnocont))

==================
capsnocont with comment
==================

capsnocont this is a lame comment

---

(source_file
  (capsnocont)
  (end_comment))

==================
capsnocont with comment
==================

capsnocont # this is a lame comment

---

(source_file
  (capsnocont)
  (end_comment))
